--- a/index.html
+++ b/index.html
@@ -19,21 +19,21 @@
             <p class="apresentacao__conteudo__texto">Olá! Sou Joana Santos, desenvolvedora Front-end com especialidade em <strong>React, HTML e CSS.</strong> Ajudo pequenos negócios e designers a colocarem em prática boas ideias. vamos conversar?</p>
             <div class="apresentacao__links">
                 <h2 class="apresentacao__links__subtitulo">Acesse minhas redes:</h2>
-                <a class="apresentacao__links__link" href="https://github.com/fredespindola">
+                <a class="apresentacao__links__navegacao" href="https://github.com/fredespindola">
                     <img src="./assets/github.png" >
                     Github
                 </a>
-                <a class="apresentacao__links__link" href="https://linkedin.com">
+                <a class="apresentacao__links__navegacao" href="https://linkedin.com">
                     <img src="./assets/linkedin.png" >
                     Linkedin
                 </a>
-                <a class="apresentacao__links__link" href="https://twitch.tv">
+                <a class="apresentacao__links__navegacao" href="https://twitch.tv">
                     <img src="./assets/twitch.png" >
                     Twitch
                 </a>
             </div>
         </section>
-        <img src="./assets/imagem.png" alt="Foto da Joana Santos programando">
+        <img class="apresentacao__imagem" src="./assets/imagem.png" alt="Foto da Joana Santos programando">
         
     </main>
     <footer class="rodape">
